--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="col-xs-12 col-md-6 col-lg-3">
         <!-- CARD 1-->
                       <div class="card" style="width: 22rem;">
-              <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait5.jpg?alt=media&token=54ba5d07-01f9-445e-bcf4-ef2c0b0851e9&_gl=1*rp5k3o*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY0MDEzNy4xLjEuMTY5NjY0MTY2Ni41Ni4wLjA." class="card-img-top" alt="">
+              <img src="" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
                 <!-- botones RRSS perfil -->
