--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
                           </div>
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img src="/assets/img/imagen1.jpeg" class="d-block w-100" alt="...">
+                              <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen1(1).png?alt=media&token=dd41ce17-8353-4e3c-8171-3b36a708c81d&_gl=1*6i1ep5*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA1NS40LjAuMA.." class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                              <img src="/assets/img/imagen3.webp" class="d-block w-100" alt="...">
+                              <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen2(1).png?alt=media&token=23ce79ac-ef51-47c3-96d2-349572c27b6a&_gl=1*zihskq*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA3Ni41My4wLjA." class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                              <img src="/assets/img/imagen2(1).png" class="d-block w-100" alt="...">
+                              <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen2(1).png?alt=media&token=23ce79ac-ef51-47c3-96d2-349572c27b6a&_gl=1*zihskq*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA3Ni41My4wLjA." class="d-block w-100" alt="...">
                             </div>
                           </div>
                           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -238,7 +238,7 @@
                             <img src="/assets/img/imagen3.webp" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/assets/img/imagen2(1).png" class="d-block w-100" alt="...">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen2(1).png?alt=media&token=23ce79ac-ef51-47c3-96d2-349572c27b6a&_gl=1*zihskq*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA3Ni41My4wLjA." class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -323,7 +323,7 @@
                             <img src="/assets/img/imagen3.webp" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/assets/img/imagen2(1).png" class="d-block w-100" alt="...">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen2(1).png?alt=media&token=23ce79ac-ef51-47c3-96d2-349572c27b6a&_gl=1*zihskq*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA3Ni41My4wLjA." class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -408,7 +408,7 @@
                             <img src="/assets/img/imagen3.webp" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/assets/img/imagen2(1).png" class="d-block w-100" alt="...">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen2(1).png?alt=media&token=23ce79ac-ef51-47c3-96d2-349572c27b6a&_gl=1*zihskq*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA3Ni41My4wLjA." class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -493,7 +493,7 @@
                             <img src="/assets/img/imagen3.webp" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/assets/img/imagen2(1).png" class="d-block w-100" alt="...">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen2(1).png?alt=media&token=23ce79ac-ef51-47c3-96d2-349572c27b6a&_gl=1*zihskq*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA3Ni41My4wLjA." class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -578,7 +578,7 @@
                             <img src="/assets/img/imagen3.webp" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/assets/img/imagen2(1).png" class="d-block w-100" alt="...">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/imagen2(1).png?alt=media&token=23ce79ac-ef51-47c3-96d2-349572c27b6a&_gl=1*zihskq*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA3Ni41My4wLjA./assets/img/imagen2(1).png" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
