cambios fotos perfil

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <!-- CARD 1-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="/assets/img/portrait_profile/portrait4.jpg" class="card-img-top" alt="">
+            <img src="../proyecto-fotohuasi-GoCode-1/assets/img/portrait_profile/portrait4.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
                               <!-- botones RRSS perfil -->
@@ -442,7 +442,7 @@
       <!-- CARD 1-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="/assets/img/portrait_profile/portrait5.jpg" class="card-img-top" alt="">
+            <img src="../assets/img/portrait_profile/portrait5.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
               <!-- botones RRSS perfil -->
@@ -527,7 +527,7 @@
       <!-- CARD 1-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="/assets/img/portrait_profile/portrait6.jpg" class="card-img-top" alt="">
+            <img src="../assets/img/portrait_profile/portrait6.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
               <!-- botones RRSS perfil -->
