--- a/error-404.html
+++ b/error-404.html
@@ -29,7 +29,7 @@
             <nav class="navbar bg-body-tertiary p-0">
                 <div class="container-fluid badge bg-black">
                   <a class="navbar-brand text-light" href="/index.html">
-                    <img src="/assets/img/Shutter-Aperture-17.svg" alt="Logo" width="50" height="50" class="align-text-center" >
+                    <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/Shutter-Aperture-17.svg?alt=media&token=022bee57-76af-4b5a-bc57-2bcb8a1750ec&_gl=1*18wubbo*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODAzNC4yNS4wLjA." alt="Logo" width="50" height="50" class="align-text-center" >
                     FotoHuasi  
                   </a>
               
