--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
     <div class="row p-5 bg-black text-light text-opacity-75 justify-content-between">
         <div class="col-xs-12 col-md-6 col-lg-3 ">
           <p class="h3 opacity-75">
-            <a class="navbar-brand text-light" href="">
+            <a class="navbar-brand text-light" href="index.html">
             <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/Shutter-Aperture-17.svg?alt=media&token=022bee57-76af-4b5a-bc57-2bcb8a1750ec&_gl=1*18wubbo*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODAzNC4yNS4wLjA." alt="Logo" width="50" height="50" class="align-text-center" >
             </a>
           </p>
