--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Aqui comienza el navbar -->
   <nav class="navbar bg-body-tertiary p-0">
     <div class="container-fluid badge bg-black">
-      <a class="navbar-brand text-light" href="/index.html">
+      <a class="navbar-brand text-light" href="../proyecto-fotohuasi-GoCode-1/index.html">
         <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/Shutter-Aperture-17.svg?alt=media&token=022bee57-76af-4b5a-bc57-2bcb8a1750ec&_gl=1*18wubbo*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODAzNC4yNS4wLjA." alt="Logo" width="50" height="50" class="align-text-center" >
         FotoHuasi  
       </a>
@@ -103,7 +103,7 @@
                       <div class="card" style="width: 22rem;">
               <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait1.jpg?alt=media&token=a3e715ab-155d-47e3-9164-14aa317cbd31&_gl=1*ckbp8j*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA4NS40NC4wLjA." class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
+                <h5 class="card-title">Jane | Fotografía Social</h5>
                 <!-- botones RRSS perfil -->
                 <p>
                     <button type="button" class="btn btn-lg ">
@@ -184,12 +184,12 @@
             <div class="container-fluid">
               <div class="row justify-content-between">
                   <div class="col-xs-12 col-md-6 col-lg-3 ">
-      <!-- CARD 1-->
+      <!-- CARD 2-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="/assets/img/portrait_profile/portrait2.jpg" class="card-img-top" alt="">
+            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait2.jpg?alt=media&token=09570266-662b-47a3-8ad6-9b863468972d&_gl=1*1uy6uq2*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA4OC40MS4wLjA." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
+              <h5 class="card-title">Lara | Fotografia Moda</h5>
               <!-- botones RRSS perfil -->
               <p>
                 <button type="button" class="btn btn-lg ">
@@ -198,7 +198,7 @@
                   </a>
                 </button>
               <button type="button" class="btn  btn-lg">
-                <a href="https://facebook.com" target="_blank">
+                <a href="https://whatsapp.com" target="_blank">
                   <i class="bi bi-whatsapp"></i>
                 </a>
               </button>
@@ -219,7 +219,7 @@
                 </div>
               </div>
             </div>
-      <!-- Modal 1-->
+      <!-- Modal 2-->
               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -269,12 +269,12 @@
             <div class="container-fluid">
               <div class="row justify-content-between">
                   <div class="col-xs-12 col-md-6 col-lg-3 ">
-      <!-- CARD 1-->
+      <!-- CARD 3-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="/assets/img/portrait_profile/portrait3.jpg" class="card-img-top" alt="">
+            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait3.jpg?alt=media&token=6b0fae94-a33a-4c6e-8e95-027f958e78e3&_gl=1*1i3wkq6*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA5My4zNi4wLjA." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
+              <h5 class="card-title">Grace Wilson | Fotografia social</h5>
                <!-- botones RRSS perfil -->
                <p>
                  <button type="button" class="btn btn-lg ">
@@ -283,7 +283,7 @@
                    </a>
                  </button>
                <button type="button" class="btn  btn-lg">
-                 <a href="https://facebook.com" target="_blank">
+                 <a href="https://whatsapp.com" target="_blank">
                    <i class="bi bi-whatsapp"></i>
                  </a>
                </button>
@@ -304,7 +304,7 @@
                 </div>
               </div>
             </div>
-      <!-- Modal 1-->
+      <!-- Modal 3-->
               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -354,12 +354,12 @@
             <div class="container-fluid">
               <div class="row justify-content-between">
                   <div class="col-xs-12 col-md-6 col-lg-3 ">
-      <!-- CARD 1-->
+      <!-- CARD 4-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="../proyecto-fotohuasi-GoCode-1/assets/img/portrait_profile/portrait4.jpg" class="card-img-top" alt="">
+            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait4.jpg?alt=media&token=a2ec6786-6b60-4898-8559-64842f85f9b8&_gl=1*1vhkf7c*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODA5Ni4zMy4wLjA." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
+              <h5 class="card-title">Jenny Ariston | Fotografia social</h5>
                               <!-- botones RRSS perfil -->
                               <p>
                                 <button type="button" class="btn btn-lg ">
@@ -368,7 +368,7 @@
                                   </a>
                                 </button>
                               <button type="button" class="btn  btn-lg">
-                                <a href="https://facebook.com" target="_blank">
+                                <a href="https://whatsapp.com" target="_blank">
                                   <i class="bi bi-whatsapp"></i>
                                 </a>
                               </button>
@@ -389,7 +389,7 @@
                 </div>
               </div>
             </div>
-      <!-- Modal 1-->
+      <!-- Modal 4-->
               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -439,12 +439,12 @@
             <div class="container-fluid">
               <div class="row justify-content-between">
                   <div class="col-xs-12 col-md-6 col-lg-3 ">
-      <!-- CARD 1-->
+      <!-- CARD 5-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="../assets/img/portrait_profile/portrait5.jpg" class="card-img-top" alt="">
+            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait5.jpg?alt=media&token=54ba5d07-01f9-445e-bcf4-ef2c0b0851e9&_gl=1*ekziru*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODEwMC4yOS4wLjA." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
+              <h5 class=Sara Lopéz | Food Photography</h5>
               <!-- botones RRSS perfil -->
               <p>
                 <button type="button" class="btn btn-lg ">
@@ -453,7 +453,7 @@
                   </a>
                 </button>
               <button type="button" class="btn  btn-lg">
-                <a href="https://facebook.com" target="_blank">
+                <a href="https://whatsapp.com" target="_blank">
                   <i class="bi bi-whatsapp"></i>
                 </a>
               </button>
@@ -474,7 +474,7 @@
                 </div>
               </div>
             </div>
-      <!-- Modal 1-->
+      <!-- Modal 5-->
               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -524,12 +524,12 @@
             <div class="container-fluid">
               <div class="row justify-content-between">
                   <div class="col-xs-12 col-md-6 col-lg-3 ">
-      <!-- CARD 1-->
+      <!-- CARD 6-->
       <!-- Button trigger modal -->
                     <div class="card" style="width: 22rem;">
-            <img src="../assets/img/portrait_profile/portrait6.jpg" class="card-img-top" alt="">
+            <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait6.jpg?alt=media&token=943ef174-c04f-40fd-acea-5bb88b230daa&_gl=1*13vn8v8*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODEwNC4yNS4wLjA." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Florencia/Fotografia social/instagram</h5>
+              <h5 class="card-title">Sara Lopéz | Food Photography</h5>
               <!-- botones RRSS perfil -->
               <p>
                 <button type="button" class="btn btn-lg ">
@@ -538,7 +538,7 @@
                   </a>
                 </button>
               <button type="button" class="btn  btn-lg">
-                <a href="https://facebook.com" target="_blank">
+                <a href="https://whatsapp.com" target="_blank">
                   <i class="bi bi-whatsapp"></i>
                 </a>
               </button>
@@ -559,7 +559,7 @@
                 </div>
               </div>
             </div>
-      <!-- Modal 1-->
+      <!-- Modal 6-->
               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -619,7 +619,7 @@
     <div class="row p-5 bg-black text-light text-opacity-75 justify-content-between">
         <div class="col-xs-12 col-md-6 col-lg-3 ">
           <p class="h3 opacity-75">
-            <a class="navbar-brand text-light" href="index.html">
+            <a class="navbar-brand text-light" href="../proyecto-fotohuasi-GoCode-1/index.html">
             <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/Shutter-Aperture-17.svg?alt=media&token=022bee57-76af-4b5a-bc57-2bcb8a1750ec&_gl=1*18wubbo*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODAzNC4yNS4wLjA." alt="Logo" width="50" height="50" class="align-text-center" >
             </a>
           </p>
