--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                     <div class="card" style="width: 22rem;">
             <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/portrait5.jpg?alt=media&token=54ba5d07-01f9-445e-bcf4-ef2c0b0851e9&_gl=1*ekziru*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODEwMC4yOS4wLjA." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class=Sara Lopéz | Food Photography</h5>
+              <h5>Mark Pompei | Street Life</h5>
               <!-- botones RRSS perfil -->
               <p>
                 <button type="button" class="btn btn-lg ">
