--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <main class="bgmain">
     <div class="container-fluid">
-      <div class="row  bg-black text-light text-opacity-75 ">
+      <div class="row mb-1 bg-black text-light text-opacity-75 ">
           <div class="col-xs-12 col-md-6 col-lg-4 ">
             
             <section class="sectioncard">
