--- a/registro.html
+++ b/registro.html
@@ -8,22 +8,22 @@
     <!-- Robots -->
     <meta name="robots" content="index, follow">
     <!-- Descripcion -->
-    <meta name="description" content="Blog de Fotográfos">
+    <meta name="description" content="Página de registro">
     <!-- Keywords -->
     <meta name="keywords" content="Fotográfos, blog de fotografía">
     <!-- FAVICON -->
     <link rel="shortcut icon" href="/assets/img/Shutter-Aperture-17.ico" type="image/x-icon">
     <!-- BOOTSTRAP CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/proyecto-fotohuasi-GoCode-1/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- ICONOS BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <!-- titulo -->
-    <title>FotoHuasi | Blog de fotográfos</title>
+    <title>FotoHuasi | Registro</title>
     <!-- FIN TITULO -->
   </head>
 
-<body class="container-fluid">
+<body class="container-fluid bg-black">
 <!-- header -->
 <header>
   <!-- Aqui comienza el navbar -->
@@ -40,29 +40,63 @@
   <!-- Aqui culmina el navbar -->
     </header>
 
-    <aside>
-      <h1 class=" center display-5">Iniciar sesión</h1>
-    </aside>
 <!-- MAIN -->
-
-<main>
-  <section class="col-xs-8 col-md-10 col-lg-12 center " >
+<aside><h1 class="center display-5">Registrate</h1></aside>
+<main class="center">
+  <section class="col-xs-12 col-md-9 col-lg col-lg-9 center">
     <form class="formulario-de-registro">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su email">
-        <div id="emailHelp" class="form-text text-light">Nunca compartiremos su email con nadie.</div>
+      <div class="form-group row">
+        <label for="" class="col-form-label">Nombre y Apellido</label>
+        <div class="">
+          <input type="text" class="form-control" id="" required placeholder="Ingrese su(s) nombre(s) y apellido(s)" >
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="exampleInputPassword1 " placeholder="Ingrese su contraseña">
+      <div class="form-group row">
+        <label for="inputEmail3" class="col-form-label">Ingrese su correo electrónico</label>
+        <div class="">
+          <input type="email" class="form-control" id="inputEmail3" required placeholder="Ingrese su email">
+        </div>
       </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Recuérdame</label>
+      <div class="form-group row">
+        <label for="inputPassword3" class="col-form-label">Ingrese una Contraseña</label>
+        <div class="">
+          <input type="password" class="form-control" id="inputPassword3" required placeholder="Ingrese una contraseña">
+        </div>
       </div>
-      <button type="submit" class="btn btn-primary">Enviar <a href="/profile.html"></a></button>
+      <fieldset class="form-group">
+        <div class="row">
+          <legend class="col-form-label pt-0">Rol:</legend>
+          <div >
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+              <label class="form-check-label" for="gridRadios1">
+                Fotográfo
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+              <label class="form-check-label" for="gridRadios2">
+                Retocador
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+              <label class="form-check-label" for="gridRadios3">
+                Aficionado
+              </label>
+            </div>
+          </div>
+        </div>
+      </fieldset>
+     
+
+      <div class="form-group row">
+        <div >
+          <button type="submit" class="btn btn-primary ">Registrar</button>
+        </div>
+      </div>
     </form>
+    <!-- fin formulario de nombre y apellido -->
   </section> 
 </main>
 
