insercion de about-us

--- a/about-us.html
+++ b/about-us.html
@@ -18,8 +18,13 @@
     <link rel="stylesheet" href="/proyecto-fotohuasi-GoCode-1/assets/css/style.css">
     <!-- ICONOS BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100;400;700&display=swap" rel="stylesheet">
       <!-- titulo -->
-    <title>FotoHuasi | Login</title>
+    <title>FotoHuasi | About us</title>
     <!-- FIN TITULO -->
   </head>
 
@@ -42,36 +47,26 @@
 <!-- MAIN -->
 
 <main>
-  <!-- titulo -->
-  <article>
-    <h1 class="center display-5">Iniciar sesión</h1>
-  </article> 
-<!-- fin de titulo -->
-<!-- inicio formulario de login -->
-  <section class=" center " >
-    <form class="formulario-de-registro">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su email">
-        <div id="emailHelp" class="form-text text-light">Nunca compartiremos su email con nadie.</div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="exampleInputPassword1 " placeholder="Ingrese su contraseña">
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Recuérdame</label>
-      </div>
-      <div>
-        <button type="submit" class="btn btn-primary">Enviar <a href="/profile.html"></a></button>
-      </div>
-     <div class="mt-5">
-      <small>Crear cuenta nueva <a href="registro.html">Registrate.</a> </small>
-     </div>
-    </form>
+ 
+<!-- inicio about us -->
+  <section  >
+    <article class="about-us">
+        <h1>Sobre nosotros</h1>
+        <p id="p0">
+            Fotohuasi reúne a creadores de imágenes digitales. <br>
+        Busca la visibilización de trabajos y creadores de diferentes ramas en un solo sitio; <br> fomentando la interacción entre expositores e interesados. <br>
+        Es el inicio de una App que se posicionará como una vidriera accesible a todos.
+        </p>
+    </article>
+    <article class="about-us">
+        <h2>Historia</h2>
+        <p id="p0">Este sitio es iniciado en el mes de septiembre del año 2023, por Christian Flores; <br> como parte del proyecto interniveles N2 de GoCode. <br>
+        Pretende en principio ser un nexo entre creadores de imágenes y público interesado.  <br>
+        Reunir en un solo sitio los mejores trabajos de creadores por ahora dispersos en redes sociales como instagram, facebook,etc. Sería una alternativa a la fatigosa búsqueda individual de creadores.  
+        </p>
+    </article>
   </section> 
-  <!-- Fin del formulario login-->
+  <!-- Fin about us-->
 </main>
 
 <!-- FOOTER -->
