--- a/dashboard/admin.html
+++ b/dashboard/admin.html
@@ -19,7 +19,7 @@
     <!-- ICONOS BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-    <title>Dashboard</title>
+    <title>Dashboard | Admin</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -42,7 +42,7 @@
 
             <!-- Sidebar - Brand -->
             <div class="container-fluid badge">
-                <a class="navbar-brand text-light" href="/index.html">
+                <a class="navbar-brand text-light" href="/proyecto-fotohuasi-GoCode-1/index.html">
                   <img src="https://firebasestorage.googleapis.com/v0/b/fotohuasi-24c24.appspot.com/o/Shutter-Aperture-17.svg?alt=media&token=022bee57-76af-4b5a-bc57-2bcb8a1750ec&_gl=1*18wubbo*_ga*MzkzMzkwMjc0LjE2OTY2NDAxMzY.*_ga_CW55HF8NVT*MTY5NjY3Nzk5OS4yLjEuMTY5NjY3ODAzNC4yNS4wLjA." alt="Logo" width="50" height="50" class="align-text-center" >
                 </a>
 
@@ -117,12 +117,12 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="/login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+                        <a class="collapse-item" href="/proyecto-fotohuasi-GoCode-1/login.html">Login</a>
+                        <a class="collapse-item" href="/proyecto-fotohuasi-GoCode-1/registro.html">Registro</a>
+                        <a class="collapse-item" href="/proyecto-fotohuasi-GoCode-1/about-us.html">Sobre nosotros</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="/error-404.html">404 Page</a>
+                        <a class="collapse-item" href="/proyecto-fotohuasi-GoCode-1/error-404.html">404 Page</a>
                     </div>
                 </div>
             </li>
@@ -316,27 +316,24 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-light-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-light-600 small">Administrador</span>
                                 <img class="img-profile rounded-circle"
                                     src="img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
+                                
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
+                                    Configuraciones
                                 </a>
                               
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
+                                    Cerrar sesión
                                 </a>
                             </div>
                         </li>
